feat: Overhaul website with 3D background and animations

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>Gerrit</h1>
+            <h1 id="main-title">Gerrit</h1>
             <p>// Web Developer & Tech Enthusiast</p>
         </header>
 
